--- a/app/webroot/css/layout.css
+++ b/app/webroot/css/layout.css
@@ -41,11 +41,19 @@
 }
 
 /* line 40, ../sass/layout.sass */
+.chat {
+  position: fixed;
+  right: 0px;
+  top: 210px;
+  z-index: 100;
+}
+
+/* line 46, ../sass/layout.sass */
 .contacto {
   font-size: 12pt;
 }
 
-/* line 43, ../sass/layout.sass */
+/* line 49, ../sass/layout.sass */
 .dropdown-menu {
   background-color: #617c6d !important;
   min-width: 280px !important;
@@ -54,7 +62,7 @@
   border-top-width: 4px !important;
 }
 
-/* line 50, ../sass/layout.sass */
+/* line 56, ../sass/layout.sass */
 .footer {
   background-color: #96968a;
   color: white;
@@ -64,18 +72,22 @@
   padding-top: 40px;
 }
 
-/* line 61, ../sass/layout.sass */
-.horario {
-  background-color: #d4d6b0;
-  margin-top: 37px;
+/* line 67, ../sass/layout.sass */
+.frase-listado {
+  font-size: 12px;
 }
 
-/* line 65, ../sass/layout.sass */
+/* line 70, ../sass/layout.sass */
+.horario {
+  margin-top: 10px;
+}
+
+/* line 74, ../sass/layout.sass */
 .logo {
   padding-top: 45px;
 }
 
-/* line 68, ../sass/layout.sass */
+/* line 77, ../sass/layout.sass */
 .marcas {
   margin: 0 auto;
   padding-left: 5px;
@@ -84,18 +96,18 @@
   padding-bottom: 40px;
 }
 
-/* line 76, ../sass/layout.sass */
+/* line 85, ../sass/layout.sass */
 .marcas-lista {
   margin-top: 40px;
 }
 
-/* line 79, ../sass/layout.sass */
+/* line 88, ../sass/layout.sass */
 .submenu {
   font-family: "offside";
   color: white;
 }
 
-/* line 83, ../sass/layout.sass */
+/* line 92, ../sass/layout.sass */
 .submenu:hover,
 .submenu:focus {
   color: white;
@@ -103,25 +115,30 @@
   text-decoration: none;
 }
 
-/* line 89, ../sass/layout.sass */
+/* line 98, ../sass/layout.sass */
 .menu-principal {
   font-family: "offside";
   color: white;
 }
 
-/* line 93, ../sass/layout.sass */
+/* line 102, ../sass/layout.sass */
+.nav-xs {
+  background-color: #617c6d;
+}
+
+/* line 105, ../sass/layout.sass */
 .navbar-default .navbar-nav > li > a {
   color: white;
 }
 
-/* line 96, ../sass/layout.sass */
+/* line 108, ../sass/layout.sass */
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
   color: white;
   background-color: transparent;
 }
 
-/* line 101, ../sass/layout.sass */
+/* line 113, ../sass/layout.sass */
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:hover,
 .navbar-default .navbar-nav > .open > a:focus {
@@ -129,36 +146,46 @@
   color: #b5b97a;
 }
 
-/* line 107, ../sass/layout.sass */
+/* line 119, ../sass/layout.sass */
 .navbar-right {
   padding-right: 10px;
 }
 
-/* line 111, ../sass/layout.sass */
+/* line 123, ../sass/layout.sass */
+.navbar-toggle {
+  margin-top: 3px !important;
+}
+
+/* line 126, ../sass/layout.sass */
+.navbar-toggle:hover,
+.navbar-toggle:focus {
+  background-color: #96968a !important;
+}
+
+/* line 130, ../sass/layout.sass */
 .slogam {
   font-family: "offside";
   margin-top: 80px;
 }
 
-/* line 116, ../sass/layout.sass */
+/* line 135, ../sass/layout.sass */
 .titulo {
   font-family: "offside";
 }
 
-/* line 119, ../sass/layout.sass */
+/* line 138, ../sass/layout.sass */
 .pestania {
   color: #617c6d;
   font-family: "offside";
-  font-size: 12pt;
 }
 
-/* line 125, ../sass/layout.sass */
+/* line 144, ../sass/layout.sass */
 .pestania:hover,
 .pestania:focus {
   color: #617c6d;
 }
 
-/* line 129, ../sass/layout.sass */
+/* line 148, ../sass/layout.sass */
 .jumbotrone {
   padding: 30px;
   margin-bottom: 15px;
@@ -172,7 +199,7 @@
   padding-top: 10px;
 }
 
-/* line 142, ../sass/layout.sass */
+/* line 161, ../sass/layout.sass */
 .linea {
   border-top: 3px solid #b5b97a;
   color: #b5b97a;
@@ -180,7 +207,7 @@
   margin-top: -4px;
 }
 
-/* line 149, ../sass/layout.sass */
+/* line 168, ../sass/layout.sass */
 .linea-corta {
   border-top: 3px solid #d4d6b0;
   color: #d4d6b0;
@@ -188,18 +215,18 @@
   margin-top: -8px;
 }
 
-/* line 156, ../sass/layout.sass */
+/* line 175, ../sass/layout.sass */
 address {
   font-family: "offside";
 }
 
-/* line 160, ../sass/layout.sass */
+/* line 179, ../sass/layout.sass */
 ol {
   font-family: "quattro";
   font-size: 13pt;
 }
 
-/* line 165, ../sass/layout.sass */
+/* line 184, ../sass/layout.sass */
 p {
   font-family: "quattro";
   font-size: 13pt;
