--- a/app/webroot/sass/layout.sass
+++ b/app/webroot/sass/layout.sass
@@ -37,6 +37,12 @@ $verde-claro: #b5b97a
   margin-top: 20px
   padding: 10px
 
+.chat
+  position: fixed
+  right: 0px
+  top: 210px
+  z-index: 100
+
 .contacto
   font-size: 12pt
 
@@ -58,9 +64,12 @@ $verde-claro: #b5b97a
     bottom: 20px
     top: 40px
 
+.frase-listado
+  font-size: 12px
+
 .horario
-  background-color: $gris
-  margin-top: 37px
+  //background-color: $gris
+  margin-top: 10px
 
 .logo
   padding-top: 45px
@@ -90,6 +99,9 @@ $verde-claro: #b5b97a
   font-family: "offside"
   color: $blanco
 
+.nav-xs
+  background-color: $verde
+
 .navbar-default .navbar-nav > li > a
   color: $blanco
 
@@ -108,6 +120,13 @@ $verde-claro: #b5b97a
   padding:
     right: 10px
   
+.navbar-toggle
+  margin-top: 3px !important
+
+.navbar-toggle:hover,
+.navbar-toggle:focus
+  background-color: $gris-oscuro !important
+
 .slogam
   font-family: "offside"
   margin:
@@ -120,7 +139,7 @@ $verde-claro: #b5b97a
   color: $verde
   font:
     family: "offside"
-    size: 12pt
+    //size: 12pt
 
 .pestania:hover,
 .pestania:focus
