--- a/app/webroot/css/layout.css
+++ b/app/webroot/css/layout.css
@@ -28,19 +28,21 @@
 /* line 28, ../sass/layout.sass */
 .caja-preguntas {
   background-color: #d4d6b0;
+  font-family: "quattro";
+  font-size: 13pt;
   padding: 15px;
   margin-bottom: 15px;
   margin-top: 15px;
 }
 
-/* line 35, ../sass/layout.sass */
+/* line 38, ../sass/layout.sass */
 .destacado {
   background-color: #d4d6b0;
   margin-top: 20px;
   padding: 10px;
 }
 
-/* line 40, ../sass/layout.sass */
+/* line 43, ../sass/layout.sass */
 .chat, .chat-xs {
   opacity: 0.2;
   position: fixed;
@@ -49,24 +51,24 @@
   z-index: 100;
 }
 
-/* line 47, ../sass/layout.sass */
+/* line 50, ../sass/layout.sass */
 .chat-xs {
   width: 80px;
 }
 
-/* line 51, ../sass/layout.sass */
+/* line 54, ../sass/layout.sass */
 .chat:hover, .chat-xs:hover,
 .chat:focus,
 .chat-xs:focus {
   opacity: 0.8;
 }
 
-/* line 55, ../sass/layout.sass */
+/* line 58, ../sass/layout.sass */
 .contacto {
   font-size: 12pt;
 }
 
-/* line 58, ../sass/layout.sass */
+/* line 61, ../sass/layout.sass */
 .dropdown-menu {
   background-color: #617c6d !important;
   min-width: 230px !important;
@@ -75,7 +77,7 @@
   border-top-width: 4px !important;
 }
 
-/* line 65, ../sass/layout.sass */
+/* line 68, ../sass/layout.sass */
 .footer {
   background-color: #96968a;
   color: white;
@@ -85,28 +87,28 @@
   padding-top: 40px;
 }
 
-/* line 76, ../sass/layout.sass */
+/* line 79, ../sass/layout.sass */
 .frase-listado {
   font-size: 12px;
 }
 
-/* line 79, ../sass/layout.sass */
+/* line 82, ../sass/layout.sass */
 .horario {
   margin-top: 10px;
 }
 
-/* line 83, ../sass/layout.sass */
+/* line 86, ../sass/layout.sass */
 .logo {
   padding-top: 45px;
 }
 
-/* line 86, ../sass/layout.sass */
+/* line 89, ../sass/layout.sass */
 .mapa {
   max-width: 900px;
   display: inline !important;
 }
 
-/* line 90, ../sass/layout.sass */
+/* line 93, ../sass/layout.sass */
 .marcas {
   margin: 0 auto;
   padding-left: 5px;
@@ -115,53 +117,53 @@
   padding-bottom: 40px;
 }
 
-/* line 98, ../sass/layout.sass */
+/* line 101, ../sass/layout.sass */
 .marcas-lista {
   margin-top: 40px;
 }
 
-/* line 101, ../sass/layout.sass */
+/* line 104, ../sass/layout.sass */
 .nota {
   color: #d4d6b0;
 }
 
-/* line 104, ../sass/layout.sass */
+/* line 107, ../sass/layout.sass */
 .submenu {
   font-family: "offside";
   color: white;
 }
 
-/* line 108, ../sass/layout.sass */
+/* line 111, ../sass/layout.sass */
 .submenu:hover,
 .submenu:focus {
   color: #b5b97a;
   text-decoration: none;
 }
 
-/* line 114, ../sass/layout.sass */
+/* line 117, ../sass/layout.sass */
 .menu-principal {
   font-family: "offside";
   color: white;
 }
 
-/* line 118, ../sass/layout.sass */
+/* line 121, ../sass/layout.sass */
 .nav-xs {
   background-color: #617c6d;
 }
 
-/* line 121, ../sass/layout.sass */
+/* line 124, ../sass/layout.sass */
 .navbar-default .navbar-nav > li > a {
   color: white;
 }
 
-/* line 124, ../sass/layout.sass */
+/* line 127, ../sass/layout.sass */
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
   color: white;
   background-color: transparent;
 }
 
-/* line 129, ../sass/layout.sass */
+/* line 132, ../sass/layout.sass */
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:hover,
 .navbar-default .navbar-nav > .open > a:focus {
@@ -169,46 +171,46 @@
   color: #b5b97a;
 }
 
-/* line 135, ../sass/layout.sass */
+/* line 138, ../sass/layout.sass */
 .navbar-right {
   padding-right: 10px;
 }
 
-/* line 139, ../sass/layout.sass */
+/* line 142, ../sass/layout.sass */
 .navbar-toggle {
   margin-top: 3px !important;
 }
 
-/* line 142, ../sass/layout.sass */
+/* line 145, ../sass/layout.sass */
 .navbar-toggle:hover,
 .navbar-toggle:focus {
   background-color: #96968a !important;
 }
 
-/* line 146, ../sass/layout.sass */
+/* line 149, ../sass/layout.sass */
 .slogam {
   font-family: "offside";
   margin-top: 80px;
 }
 
-/* line 151, ../sass/layout.sass */
+/* line 154, ../sass/layout.sass */
 .titulo {
   font-family: "offside";
 }
 
-/* line 154, ../sass/layout.sass */
+/* line 157, ../sass/layout.sass */
 .pestania {
   color: #617c6d;
   font-family: "offside";
 }
 
-/* line 160, ../sass/layout.sass */
+/* line 163, ../sass/layout.sass */
 .pestania:hover,
 .pestania:focus {
   color: #617c6d;
 }
 
-/* line 164, ../sass/layout.sass */
+/* line 167, ../sass/layout.sass */
 .jumbotrone {
   padding: 30px;
   margin-bottom: 15px;
@@ -222,7 +224,7 @@
   padding-top: 10px;
 }
 
-/* line 177, ../sass/layout.sass */
+/* line 180, ../sass/layout.sass */
 .linea {
   border-top: 3px solid #b5b97a;
   color: #b5b97a;
@@ -230,7 +232,7 @@
   margin-top: -4px;
 }
 
-/* line 184, ../sass/layout.sass */
+/* line 187, ../sass/layout.sass */
 .linea-corta {
   border-top: 3px solid #d4d6b0;
   color: #d4d6b0;
@@ -238,20 +240,67 @@
   margin-top: -8px;
 }
 
-/* line 191, ../sass/layout.sass */
+/* line 194, ../sass/layout.sass */
+.linea-ejemplos {
+  border-top: 3px solid #b5b97a;
+  color: #b5b97a;
+  margin-bottom: 20px;
+  margin-top: 1px;
+}
+
+/* line 201, ../sass/layout.sass */
 address {
   font-family: "offside";
 }
 
-/* line 195, ../sass/layout.sass */
+/* line 205, ../sass/layout.sass */
 ol {
   font-family: "quattro";
   font-size: 13pt;
 }
 
-/* line 200, ../sass/layout.sass */
+/* line 210, ../sass/layout.sass */
 p {
   font-family: "quattro";
   font-size: 13pt;
   text-align: justify;
+}
+
+/* Site Heart */
+/* line 217, ../sass/layout.sass */
+.sh_chat_logo {
+  width: 0px;
+}
+
+/* line 220, ../sass/layout.sass */
+.sh_header_logo {
+  width: 10px !important;
+}
+
+/* line 223, ../sass/layout.sass */
+.sh_logo {
+  width: 0px !important;
+}
+
+/* line 226, ../sass/layout.sass */
+.sh_logo_btn {
+  width: 0px;
+  font-family: "offside";
+}
+
+/* line 230, ../sass/layout.sass */
+.sh_title {
+  font-family: "offside" !important;
+  font-size: 1em !important;
+}
+
+/* line 234, ../sass/layout.sass */
+.sh_title_text {
+  border-left: none;
+}
+
+/* line 237, ../sass/layout.sass */
+.sh_btn_top .sh_title_text, .sh_btn_bottom .sh_title_text {
+  font-family: "offside";
+  font-size: 1em !important;
 }
