css para productos nuevos.

--- a/app/webroot/sass/layout.sass
+++ b/app/webroot/sass/layout.sass
@@ -1,6 +1,7 @@
 $blanco: #FFFFFF
 $gris: #d4d6b0
 $gris-oscuro: #96968a
+$rojo: #B02026
 $verde: #617C6D
 $verde-oscuro: #29362f
 $verde-claro: #b5b97a
@@ -154,6 +155,10 @@ $verde-claro: #b5b97a
 .titulo
   font-family: "offside"
   
+.titulo-nuevos
+  font-family: "offside"
+  color: $rojo
+  
 .pestania
   color: $verde
   font:
@@ -197,6 +202,10 @@ $verde-claro: #b5b97a
   margin:
     bottom: 20px
     top: 1px
+
+.scroll
+  height: 300px
+  overflow: scroll
 
 address
   font:
