--- a/app/webroot/css/layout.css
+++ b/app/webroot/css/layout.css
@@ -8,24 +8,24 @@
   src: url("/fonts/QuattrocentoSans-Regular.ttf") format("truetype");
 }
 
-/* line 16, ../sass/layout.sass */
+/* line 17, ../sass/layout.sass */
 #content {
   padding-bottom: 10px;
   padding-top: 10px;
 }
 
-/* line 21, ../sass/layout.sass */
+/* line 22, ../sass/layout.sass */
 .btn-formulario {
   background-color: #617c6d;
   color: white;
 }
 
-/* line 25, ../sass/layout.sass */
+/* line 26, ../sass/layout.sass */
 .btn-formulario:focus {
   color: #b5b97a;
 }
 
-/* line 28, ../sass/layout.sass */
+/* line 29, ../sass/layout.sass */
 .caja-preguntas {
   background-color: #d4d6b0;
   font-family: "quattro";
@@ -35,14 +35,14 @@
   margin-top: 15px;
 }
 
-/* line 38, ../sass/layout.sass */
+/* line 39, ../sass/layout.sass */
 .destacado {
   background-color: #d4d6b0;
   margin-top: 20px;
   padding: 10px;
 }
 
-/* line 43, ../sass/layout.sass */
+/* line 44, ../sass/layout.sass */
 .chat, .chat-xs {
   opacity: 0.2;
   position: fixed;
@@ -51,24 +51,24 @@
   z-index: 100;
 }
 
-/* line 50, ../sass/layout.sass */
+/* line 51, ../sass/layout.sass */
 .chat-xs {
   width: 80px;
 }
 
-/* line 54, ../sass/layout.sass */
+/* line 55, ../sass/layout.sass */
 .chat:hover, .chat-xs:hover,
 .chat:focus,
 .chat-xs:focus {
   opacity: 0.8;
 }
 
-/* line 58, ../sass/layout.sass */
+/* line 59, ../sass/layout.sass */
 .contacto {
   font-size: 12pt;
 }
 
-/* line 61, ../sass/layout.sass */
+/* line 62, ../sass/layout.sass */
 .dropdown-menu {
   background-color: #617c6d !important;
   min-width: 230px !important;
@@ -77,7 +77,7 @@
   border-top-width: 4px !important;
 }
 
-/* line 68, ../sass/layout.sass */
+/* line 69, ../sass/layout.sass */
 .footer {
   background-color: #96968a;
   color: white;
@@ -87,28 +87,28 @@
   padding-top: 40px;
 }
 
-/* line 79, ../sass/layout.sass */
+/* line 80, ../sass/layout.sass */
 .frase-listado {
   font-size: 12px;
 }
 
-/* line 82, ../sass/layout.sass */
+/* line 83, ../sass/layout.sass */
 .horario {
   margin-top: 10px;
 }
 
-/* line 86, ../sass/layout.sass */
+/* line 87, ../sass/layout.sass */
 .logo {
   padding-top: 45px;
 }
 
-/* line 89, ../sass/layout.sass */
+/* line 90, ../sass/layout.sass */
 .mapa {
   max-width: 900px;
   display: inline !important;
 }
 
-/* line 93, ../sass/layout.sass */
+/* line 94, ../sass/layout.sass */
 .marcas {
   margin: 0 auto;
   padding-left: 5px;
@@ -117,53 +117,53 @@
   padding-bottom: 40px;
 }
 
-/* line 101, ../sass/layout.sass */
+/* line 102, ../sass/layout.sass */
 .marcas-lista {
   margin-top: 40px;
 }
 
-/* line 104, ../sass/layout.sass */
+/* line 105, ../sass/layout.sass */
 .nota {
   color: #d4d6b0;
 }
 
-/* line 107, ../sass/layout.sass */
+/* line 108, ../sass/layout.sass */
 .submenu {
   font-family: "offside";
   color: white;
 }
 
-/* line 111, ../sass/layout.sass */
+/* line 112, ../sass/layout.sass */
 .submenu:hover,
 .submenu:focus {
   color: #b5b97a;
   text-decoration: none;
 }
 
-/* line 117, ../sass/layout.sass */
+/* line 118, ../sass/layout.sass */
 .menu-principal {
   font-family: "offside";
   color: white;
 }
 
-/* line 121, ../sass/layout.sass */
+/* line 122, ../sass/layout.sass */
 .nav-xs {
   background-color: #617c6d;
 }
 
-/* line 124, ../sass/layout.sass */
+/* line 125, ../sass/layout.sass */
 .navbar-default .navbar-nav > li > a {
   color: white;
 }
 
-/* line 127, ../sass/layout.sass */
+/* line 128, ../sass/layout.sass */
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
   color: white;
   background-color: transparent;
 }
 
-/* line 132, ../sass/layout.sass */
+/* line 133, ../sass/layout.sass */
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:hover,
 .navbar-default .navbar-nav > .open > a:focus {
@@ -171,46 +171,52 @@
   color: #b5b97a;
 }
 
-/* line 138, ../sass/layout.sass */
+/* line 139, ../sass/layout.sass */
 .navbar-right {
   padding-right: 10px;
 }
 
-/* line 142, ../sass/layout.sass */
+/* line 143, ../sass/layout.sass */
 .navbar-toggle {
   margin-top: 3px !important;
 }
 
-/* line 145, ../sass/layout.sass */
+/* line 146, ../sass/layout.sass */
 .navbar-toggle:hover,
 .navbar-toggle:focus {
   background-color: #96968a !important;
 }
 
-/* line 149, ../sass/layout.sass */
+/* line 150, ../sass/layout.sass */
 .slogam {
   font-family: "offside";
   margin-top: 80px;
 }
 
-/* line 154, ../sass/layout.sass */
+/* line 155, ../sass/layout.sass */
 .titulo {
   font-family: "offside";
 }
 
-/* line 157, ../sass/layout.sass */
+/* line 158, ../sass/layout.sass */
+.titulo-nuevos {
+  font-family: "offside";
+  color: #b02026;
+}
+
+/* line 162, ../sass/layout.sass */
 .pestania {
   color: #617c6d;
   font-family: "offside";
 }
 
-/* line 163, ../sass/layout.sass */
+/* line 168, ../sass/layout.sass */
 .pestania:hover,
 .pestania:focus {
   color: #617c6d;
 }
 
-/* line 167, ../sass/layout.sass */
+/* line 172, ../sass/layout.sass */
 .jumbotrone {
   padding: 30px;
   margin-bottom: 15px;
@@ -224,7 +230,7 @@
   padding-top: 10px;
 }
 
-/* line 180, ../sass/layout.sass */
+/* line 185, ../sass/layout.sass */
 .linea {
   border-top: 3px solid #b5b97a;
   color: #b5b97a;
@@ -232,7 +238,7 @@
   margin-top: -4px;
 }
 
-/* line 187, ../sass/layout.sass */
+/* line 192, ../sass/layout.sass */
 .linea-corta {
   border-top: 3px solid #d4d6b0;
   color: #d4d6b0;
@@ -240,7 +246,7 @@
   margin-top: -8px;
 }
 
-/* line 194, ../sass/layout.sass */
+/* line 199, ../sass/layout.sass */
 .linea-ejemplos {
   border-top: 3px solid #b5b97a;
   color: #b5b97a;
@@ -248,18 +254,24 @@
   margin-top: 1px;
 }
 
-/* line 201, ../sass/layout.sass */
+/* line 206, ../sass/layout.sass */
+.scroll {
+  height: 300px;
+  overflow: scroll;
+}
+
+/* line 210, ../sass/layout.sass */
 address {
   font-family: "offside";
 }
 
-/* line 205, ../sass/layout.sass */
+/* line 214, ../sass/layout.sass */
 ol {
   font-family: "quattro";
   font-size: 13pt;
 }
 
-/* line 210, ../sass/layout.sass */
+/* line 219, ../sass/layout.sass */
 p {
   font-family: "quattro";
   font-size: 13pt;
@@ -267,39 +279,39 @@ p {
 }
 
 /* Site Heart */
-/* line 217, ../sass/layout.sass */
+/* line 226, ../sass/layout.sass */
 .sh_chat_logo {
   width: 0px;
 }
 
-/* line 220, ../sass/layout.sass */
+/* line 229, ../sass/layout.sass */
 .sh_header_logo {
   width: 10px !important;
 }
 
-/* line 223, ../sass/layout.sass */
+/* line 232, ../sass/layout.sass */
 .sh_logo {
   width: 0px !important;
 }
 
-/* line 226, ../sass/layout.sass */
+/* line 235, ../sass/layout.sass */
 .sh_logo_btn {
   width: 0px;
   font-family: "offside";
 }
 
-/* line 230, ../sass/layout.sass */
+/* line 239, ../sass/layout.sass */
 .sh_title {
   font-family: "offside" !important;
   font-size: 1em !important;
 }
 
-/* line 234, ../sass/layout.sass */
+/* line 243, ../sass/layout.sass */
 .sh_title_text {
   border-left: none;
 }
 
-/* line 237, ../sass/layout.sass */
+/* line 246, ../sass/layout.sass */
 .sh_btn_top .sh_title_text, .sh_btn_bottom .sh_title_text {
   font-family: "offside";
   font-size: 1em !important;
